objects/LLC_BI__Spread_Record_Total_Classification__c.object
<CustomObject>
    <description>This is the junction object between Spread Statement Record Totals and Classifications.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Classification__c</fullName>
        <description>Classification of the Spread Statement Total Group.</description>
        <inlineHelpText>Classification of the Spread Statement Total Group.</inlineHelpText>
        <label>Classification</label>
        <referenceTo>LLC_BI__Classification__c</referenceTo>
        <relationshipLabel>Spread Record Total Classifications</relationshipLabel>
        <relationshipName>Spread_Record_Total_Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Total_Group__c</fullName>
        <description>The Spread Statement Total Group that is being classified.</description>
        <inlineHelpText>The Spread Statement Total Group that is being classified.</inlineHelpText>
        <label>Spread Statement Total Group</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Spread Record Total Classifications</relationshipLabel>
        <relationshipName>Spread_Record_Total_Classifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Record Total Classification</label>
    <nameField>
        <label>Spread Record Total Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Record Total Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>